--- a/docs/src/components/Footer.astro
+++ b/docs/src/components/Footer.astro
@@ -21,7 +21,7 @@ import CobaltSm from './CobaltSm.astro';
     display: grid;
     font-size: token('font.size.05');
     font-weight: 500;
-    grid-gap: token('space.sm');
+    grid-gap: token('space.xs');
     grid-template-columns: min-content min-content;
   }
 
