--- a/docs/src/components/CobaltSm.astro
+++ b/docs/src/components/CobaltSm.astro
@@ -1,20 +1,20 @@
 <style lang="scss">
-  @use "../../tokens" as *;
+  @use '../../tokens' as *;
 
   .box {
+    --size: 1.625rem;
     align-items: flex-end;
-    border: 2px solid currentColor;
+    background-color: token('color.blue.50');
+    color: token('color.white');
     display: flex;
-    font-size: 1rem;
-    font-weight: 550;
+    font-size: 0.75rem;
+    font-weight: 500;
     line-height: 0.8;
-    height: token('space.xl');
+    height: var(--size);
     justify-content: flex-end;
-    padding: token('space.3xs');
-    width: token('space.xl');
+    padding: 0.25rem;
+    width: var(--size);
   }
 </style>
 
-<div class="box">
-  Co
-</div>
+<div class="box">Co</div>
