--- a/docs/src/components/Token.astro
+++ b/docs/src/components/Token.astro
@@ -14,7 +14,7 @@ const {type: tokenType} = Astro.props;
     ]
   }
   {
-    ['fontFamily', 'fontWeight'].includes(tokenType) && [
+    ['fontFamily', 'fontWeight', 'typography'].includes(tokenType) && [
       <svg class="token-bg">
         <use xlink:href="#hex" />
       </svg>,
@@ -84,7 +84,7 @@ const {type: tokenType} = Astro.props;
   @use '../../tokens' as *;
 
   .token {
-    color: var(--ui-fg);
+    color: token('color.ui.contrast.100');
     display: block;
     font-weight: 400;
     height: token('space.2xl');
@@ -97,7 +97,7 @@ const {type: tokenType} = Astro.props;
       fill: none;
       left: 50%;
       position: absolute;
-      stroke: var(--ui-fg);
+      stroke: token('color.ui.contrast.100');
       stroke-width: 5;
       top: 50%;
       transform: translate(-50%, -50%);
@@ -106,17 +106,18 @@ const {type: tokenType} = Astro.props;
     }
 
     &-fg {
+      --fg-size: 28px;
       align-items: center;
       display: flex;
-      fill: var(--ui-fg);
-      height: token('space.2xl') - 12px;
+      fill: token('color.ui.contrast.100');
+      height: var(--fg-size);
       justify-content: center;
       left: 50%;
       position: absolute;
       stroke-width: 0;
       top: 50%;
       transform: translate3d(-50%, -50%, 0);
-      width: token('space.2xl') - 12px;
+      width: var(--fg-size);
       z-index: 2;
     }
 
@@ -146,13 +147,13 @@ const {type: tokenType} = Astro.props;
     &--dimension {
       .token-fg {
         animation: piston token('ease.outCubic') infinite 2s;
-        background: var(--ui-fg);
+        background: token('color.ui.contrast.100');
         height: 2px;
         width: token('space.md');
 
         &::before,
         &::after {
-          background: var(--ui-fg);
+          background: token('color.ui.contrast.100');
           content: '';
           display: block;
           position: absolute;
@@ -170,11 +171,11 @@ const {type: tokenType} = Astro.props;
     }
 
     &--duration {
-      $l: 0.75 * token('space.md'); // hex is space.md; base it off that but take away a little
+      $l: calc(0.5 * var(--fg-size)); // hex is space.md; base it off that but take away a little
 
       .token-fg {
         animation: tickTock token('ease.outCubic') infinite 4s;
-        background-color: var(--ui-fg);
+        background-color: token('color.ui.contrast.100');
         transform-origin: 50% 100%;
         top: calc(50% - #{$l});
         left: calc(50% - 1px);
@@ -208,8 +209,8 @@ const {type: tokenType} = Astro.props;
         animation: flip token('ease.inOutCirc') infinite 2s;
         fill: none;
         height: token('space.lg');
+        stroke: token('color.ui.contrast.100');
         stroke-width: 32;
-        stroke: var(--ui-fg);
         width: token('space.lg');
       }
     }
@@ -260,7 +261,7 @@ const {type: tokenType} = Astro.props;
         animation: ping token('ease.outCubic') infinite 1s;
         fill: none;
         height: token('space.2xl');
-        stroke: var(--ui-fg);
+        stroke: token('color.ui.contrast.100');
         stroke-width: 8;
         transform: translate3d(-50%, -50%, 0);
         width: token('space.2xl');
