--- a/docs/src/styles/_base.scss
+++ b/docs/src/styles/_base.scss
@@ -11,13 +11,15 @@ html {
   background-color: token('color.blue.50');
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
-  background-color: var(--ui-bg);
-  color: var(--ui-fg);
+  background-color: token('color.ui.contrast.0');
+  color: token('color.ui.contrast.100');
   font-family: 'Neue Montreal', -system-ui, 'Helvetica', sans-serif;
   line-height: 1;
 }
@@ -44,7 +46,7 @@ h6 {
 
 h1 {
   font-size: token('font.size.08');
-  font-weight: 550;
+  font-weight: 500;
 }
 
 h2 {
@@ -75,7 +77,7 @@ i {
 }
 
 a {
-  color: var(--ui-action);
+  color: token('color.ui.action');
 }
 
 p {
@@ -139,8 +141,18 @@ pre {
 code {
   li &,
   p & {
-    font-size: 0.875em;
     font-weight: 500;
+  }
+
+  h1 &,
+  h2 &,
+  h3 &,
+  h4 &,
+  h5 &,
+  h6 &,
+  li &,
+  p & {
+    font-size: 0.875em;
   }
 
   a & {
