Add more best practices

--- a/docs/src/pages/docs/tokens/index.astro
+++ b/docs/src/pages/docs/tokens/index.astro
@@ -698,7 +698,7 @@ const tokenDef = {
 }`}
   />
 
-  <h2>Custom types</h2>
+  <h2 id="custom-types">Custom types</h2>
 
   <p>
     Any other <code>$type</code> will be treated as a custom type. <code>$value</code> may have any shape desired. But note that custom types will likely break existing plugins unless you configure them (the CSS and Sass plugins have a <b
@@ -708,7 +708,7 @@ const tokenDef = {
 
   <p><i>Should a type be added?<a href="https://github.com/design-tokens/community-group">Suggest it be added!</a></i></p>
 
-  <h2>Aliasing</h2>
+  <h2 id="aliasing">Aliasing</h2>
 
   <p>
     Types can be aliased <a href="https://design-tokens.github.io/community-group/format/#aliases-references" target="_blank">as defined in the Design Tokens spec</a> by using dot-delimited path syntax, wrapped in curly braces (e.g., <code
