Update deps, tighten linting

--- a/docs/src/components/Head.astro
+++ b/docs/src/components/Head.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/app.scss';
 
-const {title = 'Cobalt'} = Astro.props;
+const {title = 'Cobalt design tokens'} = Astro.props;
 ---
 
 <meta charset="UTF-8" />
@@ -10,3 +10,4 @@ const {title = 'Cobalt'} = Astro.props;
 <link rel="apple-touch-icon" type="image/png" sizes="128x128" href="/favicon-128.png" />
 <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
 <title>{title}</title>
+<meta type="description" content="Cobalt is open-source tooling for the W3C Design Tokens community spec. Load your design tokens in any website or app using code. Support light and dark mode easily." />
