--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -32,7 +32,7 @@ const tokenTypes = [
 <!DOCTYPE html>
 <html>
   <head>
-    <Head title="Cobalt" />
+    <Head title="Cobalt: manage your design tokens in code" />
     <style lang="scss">
       @use '../../tokens' as *;
 
