Add Cloudflare analytics

--- a/docs/src/layouts/docs.astro
+++ b/docs/src/layouts/docs.astro
@@ -36,5 +36,6 @@ const {content = {}} = Astro.props;
       </main>
     </div>
     <Footer />
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "f5713e86f9aa43278151f2763d6b59ae"}'></script>
   </body>
 </html>
