--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -185,5 +185,6 @@ const tokenTypes = [
 
       <Footer />
     </div>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "f5713e86f9aa43278151f2763d6b59ae"}'></script>
   </body>
 </html>
