Update Getting Started

--- a/docs/src/pages/docs/guides/modes.astro
+++ b/docs/src/pages/docs/guides/modes.astro
@@ -6,6 +6,8 @@ const title = 'Modes';
 ---
 
 <Layout content={{title}}>
+  <h1>{title}</h1>
+
   <p>Modes are <strong>alternate forms of a token.</strong> They allow your design system to account for different states or contexts that allow some values to change while others remain the same.</p>
 
   <p>To explain this concept, we’ll explore 2 common usages: <b>color</b> and <b>typography</b>.</p>
