--- a/docs/src/pages/docs/tokens/index.astro
+++ b/docs/src/pages/docs/tokens/index.astro
@@ -518,7 +518,7 @@ const tokenDef = {
   />
 
   <h2 id="gradient">
-    <Token type="color" />
+    <Token type="gradient" />
     Gradient
   </h2>
 
